--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <title>Demo Social</title>
     <!-- Stylesheets
     ================================================= -->
-    <link rel="stylesheet" href="public/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="public/css/style.css" />
-    <link rel="stylesheet" href="public/css/ionicons.min.css" />
-    <link rel="stylesheet" href="public/css/font-awesome.min.css" />
-    <link href="public/css/emoji.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./public/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="./public/css/ionicons.min.css" />
+    <link rel="stylesheet" href="./public/css/font-awesome.min.css" />
+    <link href="./public/css/emoji.css" rel="stylesheet" />
 
     <!--Google Font-->
     <link
@@ -427,13 +427,13 @@
     </script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-  <script src="public/js/jquery-3.1.1.min.js"></script>
-  <script src="script.js"></script>
-  <script src="public/js/bootstrap.min.js"></script>
-  <script src="public/js/masonry.pkgd.min.js"></script>
-  <script src="public/js/jquery.sticky-kit.min.js"></script>
-  <script src="public/js/jquery.scrollbar.min.js"></script>
-  <script src="public/js/script.js"></script>
+  <script src="./public/js/jquery-3.1.1.min.js"></script>
+  <script src="./script.js"></script>
+  <script src="./public/js/bootstrap.min.js"></script>
+  <script src="./public/js/masonry.pkgd.min.js"></script>
+  <script src="./public/js/jquery.sticky-kit.min.js"></script>
+  <script src="./public/js/jquery.scrollbar.min.js"></script>
+  <script src="./public/js/script.js"></script>
 
     <script type="text/javascript" src="auth.js"></script>
 
