--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
     </header>
     <!--Header End-->
    
-    
+       <div class="fb-share-button" 
+    data-href="https://vishali10.github.io/ScaleVR/index.html" 
+    data-layout="button_count">
+  </div>
     
     <div id="page-contents">
       <div class="container">
