--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:url"           content="https://vishali10.github.io/ScaleVR/index.html" />
+    <meta property="og:url"           content="https://soundhvish.github.io/prop-vr-soci/index.html" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Your Website Title" />
     <meta property="og:description"   content="New descriptionn" />
@@ -138,7 +138,7 @@
     <!--Header End-->
    
        <div class="fb-share-button" 
-    data-href="https://vishali10.github.io/ScaleVR/index.html" 
+    data-href="https://soundhvish.github.io/prop-vr-soci/index.html" 
     data-layout="button_count">
   </div>
     
