--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:url"           content="https://soundhvish.github.io/prop-vr-soci/index.html" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Your Website Title" />
+    <meta property="og:title"         content="<?php echo $title;?>" />
     <meta property="og:description"   content="New descriptionn" />
     <meta property="og:image"         content="https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b" />
     
@@ -441,7 +441,10 @@
     <script type="text/javascript" src="auth.js"></script>
 
     <script>
-      
+      <?php
+    $title=urlencode('Content title');
+
+?>
 
 
       var ref = firebase.database().ref("/registeredusers");
