--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     </style>
   </head>
   <body>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
     <!-- Header
     ================================================= -->
     <header id="header">
@@ -320,10 +322,7 @@
       </div>
     </div>
     
-      <div class="fb-share-button" 
-    data-href="https://soundhvish.github.io/prop-vr-soci/index.html" 
-    data-layout="button_count">
-  </div>
+<div class="fb-share-button" data-href="https://soundhvish.github.io/prop-vr-soci/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsoundhvish.github.io%2Fprop-vr-soci%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
     <!-- Footer
     ================================================= -->
     <footer id="footer">
