--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ $image=urlencode("https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspo
   </head>
   <body>
     <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
+<!--<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>-->
     <!-- Header
     ================================================= -->
     <header id="header">
