--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       <script>
 
         <?php
-        $title=urlencode('Content title');
-        $url= urlencode('https://soundhvish.github.io/prop-vr-soci/');
+        $title=urlencode("Content title");
+        $url= urlencode("https://soundhvish.github.io/prop-vr-soci/");
         $summary=urlencode("Content you can dynamically display like:");
-        $image=urlencode('https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b');
+        $image=urlencode("https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b");
         ?>
       </script>
 
