--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
       <script>
 
         <?php
-        $title=urlencode("Content title");
-        $url= urlencode("https://soundhvish.github.io/prop-vr-soci/");
-        $summary=urlencode("Content you can dynamically display like:");
-        $image=urlencode("https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b");
+        $title="Content title";
+        $url= "https://soundhvish.github.io/prop-vr-soci/";
+        $image="https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b";
         ?>
       </script>
 
@@ -326,7 +325,7 @@
         </div>
       </div>
 
-      <div class="fb-share-button" data-href="https://soundhvish.github.io/prop-vr-soci/" data-layout="button_count" data-size="small"><a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $title;?>&amp;p[summary]=<?php echo $summary;?>&amp;p[url]=<?php echo $url; ?>&amp;p[images][0]=<?php echo $image;?>','sharer','toolbar=0,status=0,width=550,height=300');" href="javascript: void(0)">Share</a></div>
+      <div class="fb-share-button" data-href="https://soundhvish.github.io/prop-vr-soci/" data-layout="button_count" data-size="small"><a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $title;?>&amp;p[url]=<?php echo $url; ?>&amp;p[images][0]=<?php echo $image;?>','sharer','toolbar=0,status=0,width=550,height=300');" href="javascript: void(0)">Share</a></div>
     <!-- Footer
       ================================================= -->
       <footer id="footer">
