--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Your Website Title" />
   <meta property="og:description"   content="Your description" />
-  <meta property="og:image"         content="https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b" />
+  <meta property="og:image"         content="https://cdn.glitch.com/5b2766b5-a31c-44f2-aa07-0b9a781ec4b2%2F5.jpg?v=1586500747672" />
 
 
 
