--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Your Website Title" />
   <meta property="og:description"   content="Your description" />
-  <meta property="og:image"         content="https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b" />
+  <meta property="og:image"         />
 
 
 
@@ -326,9 +326,9 @@
 
       <div class="fb-share-button" 
     data-href="https://soundhvish.github.io/prop-vr-soci/" 
-    data-layout="button_count">
+    data-layout="button_count" on-click="share();">
   </div>
-    <!-- Footer
+    <!-- 
       ================================================= -->
       <footer id="footer">
         <div class="container" id="contactsec">
@@ -670,7 +670,12 @@ function sendimg(e) {
         });
       });
     </script>
-    
+    <script>
+      function share()
+      {
+      var x=document.getElementByProperty("og:image");
+      x.setAttribute("content","https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b");
+      }</script>
     <div
     class="modal"
     id="shareModal"
