--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     js = d.createElement(s); js.id = id;
     js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
     fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
-
- <script>
-      function share()
+  }(document, 'script', 'facebook-jssdk'));
+  function share()
       {
         console.log("inside function share");
       var x=document.getElementByProperty("og:image");
       x.setAttribute("content","https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b");
       }</script>
+
+ 
 
 
       <!-- Your share button code -->
