--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
       <div class="fb-share-button" 
     data-href="https://soundhvish.github.io/prop-vr-soci/" 
-    data-layout="button_count" on-click="share();">
+    data-layout="button_count" onclick="share();">
   </div>
     <!-- 
       ================================================= -->
