--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
+  </script>
+  <script>
   function share()
       {
         console.log("inside function share");
