--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   }(document, 'script', 'facebook-jssdk'));
   </script>
   <script>
-  document.getElementByClass('fb-share-button').onclick = function() {
+  function share() {
 			
 		console.log("inside function share");
       var x=document.getElementByProperty("og:image");
