--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!--<!DOCTYPE html>-->
 <html lang="en">
 <head>
-
-  <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="Your Website Title" />
-  <meta property="og:description"   content="Your description" />
-  <meta property="og:image"         />
-
-
-
   <title>Demo Social</title>
     <!-- Stylesheets
       ================================================= -->
@@ -33,37 +25,34 @@
       <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
      <div id="fb-root"></div>
  <script>
-		window.fbAsyncInit = function() {
-			FB.init({
-				appId      : '986351911819016',
-				xfbml      : true,
-				version    : 'v2.10'
-			});
-			FB.AppEvents.logPageView();
-		};
-		(function(d, s, id){
-			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) {return;}
-			js = d.createElement(s); js.id = id;
-			js.src = "//connect.facebook.net/en_US/sdk.js";
-			fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-	    </script>
-         
-      
-		<script>
-		document.getElementById('shareBtn').onclick = function() {
-			FB.ui({
-				method: 'share',
-				mobile_iframe: true,
-				href: 'https://soundhvish.github.io/prop-vr-soci/'
-			}, function(response){});
-			console.log("inside share");
-		}
-		</script>
-  <script>
-  
-        </script>
+	 window.fbAsyncInit = function() {
+FB.init({appId: '986351911819016', status: true, cookie: true,
+xfbml: true});
+};
+(function() {
+var e = document.createElement('script'); e.async = true;
+e.src = document.location.protocol +
+'//connect.facebook.net/en_US/all.js';
+document.getElementById('fb-root').appendChild(e);
+}());
+	</script>
+ <script type="text/javascript">
+$(document).ready(function(){
+$('#shareBtn').click(function(e){
+e.preventDefault();
+FB.ui(
+{
+method: 'feed',
+name: 'This is the content of the "name" field.',
+link: 'http://www.groupstudy.in/articlePost.php?id=A_111213073144',
+picture: 'http://www.groupstudy.in/img/logo3.jpeg',
+caption: 'Top 3 reasons why you should care about your finance',
+description: "What happens when you don't take care of your finances? Just look at our country -- you spend irresponsibly, get in debt up to your eyeballs, and stress about how you're going to make ends meet. The difference is that you don't have a glut of taxpayers…",
+message: ""
+});
+});
+});
+</script>
 
  
 
