--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ FB.ui(
 {
 method: 'feed',
 name: 'This is the content of the "name" field.',
-link: 'http://www.groupstudy.in/articlePost.php?id=A_111213073144',
-picture: 'http://www.groupstudy.in/img/logo3.jpeg',
+link: 'https://soundhvish.github.io/prop-vr-soci/',
+picture: 'https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b"',
 caption: 'Top 3 reasons why you should care about your finance',
 description: "What happens when you don't take care of your finances? Just look at our country -- you spend irresponsibly, get in debt up to your eyeballs, and stress about how you're going to make ends meet. The difference is that you don't have a glut of taxpayers…",
 message: ""
