--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="./public/css/ionicons.min.css" />
       <link rel="stylesheet" href="./public/css/font-awesome.min.css" />
       <link href="./public/css/emoji.css" rel="stylesheet" />
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 
       <!--Google Font-->
       <link
