--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <title>Demo Social</title>
+	<meta property="og:url"           content="https://vishali10.github.io/ScaleVR/index.html" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Your Website Title" />
+    <meta property="og:description"   content="New descriptionn" />
+    <meta property="og:image"          />
     <!-- Stylesheets
       ================================================= -->
       <link rel="stylesheet" href="./public/css/bootstrap.min.css" />
@@ -41,16 +46,8 @@ document.getElementById('fb-root').appendChild(e);
 $(document).ready(function(){
 $('#shareBtn').click(function(e){
 e.preventDefault();
-FB.ui(
-{
-method: 'feed',
-name: 'This is the content of the "name" field.',
-link: 'https://soundhvish.github.io/prop-vr-soci/',
-picture: 'https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b"',
-caption: 'Top 3 reasons why you should care about your finance',
-description: "What happens when you don't take care of your finances? Just look at our country -- you spend irresponsibly, get in debt up to your eyeballs, and stress about how you're going to make ends meet. The difference is that you don't have a glut of taxpayers…",
-message: ""
-});
+var x=document.getElementByProperty("og:image");
+	x.setAttribute("content","https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b");
 });
 });
 </script>
