--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Your Website Title" />
     <meta property="og:description"   content="New descriptionn" />
-    <meta property="og:image"          />
+    <meta property="og:image" id="ogimage"          />
     <!-- Stylesheets
       ================================================= -->
       <link rel="stylesheet" href="./public/css/bootstrap.min.css" />
@@ -46,7 +46,7 @@ document.getElementById('fb-root').appendChild(e);
 $(document).ready(function(){
 $('#shareBtn').click(function(e){
 e.preventDefault();
-var x=document.getElementByProperty("og:image");
+var x=document.getElementId("ogimage");
 	x.setAttribute("content","https://firebasestorage.googleapis.com/v0/b/socio-8c7cf.appspot.com/o/images%2Fphoto-1552288092-76e7d732366c.jpg?alt=media&token=f8b6c6fb-b2cd-4f29-b56a-9d8c26d31f7b");
 });
 });
