--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Stylesheets
       ================================================= -->
-      <link rel="stylesheet" href="public/css/bootstrap.min.css" />
-      <link rel="stylesheet" href="public/css/style.css" />
+      <link rel="stylesheet" href="./public/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="./public/css/style.css" />
       <link rel="stylesheet" href="./public/css/ionicons.min.css" />
       <link rel="stylesheet" href="./public/css/font-awesome.min.css" />
       <link href="./public/css/emoji.css" rel="stylesheet" />
