--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Stylesheets
       ================================================= -->
       <link rel="stylesheet" href="public/css/bootstrap.min.css" />
-      <link rel="stylesheet" href="public/css/style.css" />
+      <link rel="stylesheet" href="public/css/styles.css" />
       <link rel="stylesheet" href="public/css/ionicons.min.css" />
       <link rel="stylesheet" href="public/css/font-awesome.min.css" />
       <link href="./public/css/emoji.css" rel="stylesheet" />
