--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ e.preventDefault();
 FB.ui(
 {
 method: 'feed',
-name: 'This is the content of the "name" field.',
+name: 'hello',
 link: 'https://soundhvish.github.io/prop-vr-soci/',
 picture: 'https://cdn.glitch.com/5b2766b5-a31c-44f2-aa07-0b9a781ec4b2%2Fp1.jfif?v=1586547980510',
 caption: 'Top 3 reasons why you should care about your finance',
