--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ FB.init({appId: '986351911819016', status: true, cookie: true,
 xfbml: true});
 };
 (function() {
+	console.log("inside FB init");
 var e = document.createElement('script'); e.async = true;
 e.src = document.location.protocol +
 '//connect.facebook.net/en_US/all.js';
