--- a/index.html
+++ b/index.html
@@ -324,8 +324,7 @@ document.getElementById('fb-root').appendChild(e);
           </div>
         </div>
       </div>
-
-       <button id="shareBtn" >Share</button>
+<a href="<?php echo 'http://www.facebook.com/sharer.php?u=' . urlencode(https://soundhvish.github.io/prop-vr-soci/); ?>"><img ... /></a>
     <!-- 
       ================================================= -->
       <footer id="footer">
