--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ document.getElementById('fb-root').appendChild(e);
           </div>
         </div>
       </div>
-<a href="<?php echo 'http://www.facebook.com/sharer.php?u=' . urlencode(https://soundhvish.github.io/prop-vr-soci/); ?>"><img ... /></a>
+<a href="<?php echo 'http://www.facebook.com/sharer.php?u=' . urlencode("https://soundhvish.github.io/prop-vr-soci/"); ?>"></a>
     <!-- 
       ================================================= -->
       <footer id="footer">
