--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ document.getElementById('fb-root').appendChild(e);
           </div>
         </div>
       </div>
-<a href="<?php echo 'http://www.facebook.com/sharer.php?u=' . urlencode("https://soundhvish.github.io/prop-vr-soci/"); ?>"><img... /></a>
+<a href="<?php echo 'http://www.facebook.com/sharer.php?u=' . urlencode("https://soundhvish.github.io/prop-vr-soci/"); ?>"><img src="https://cdn.glitch.com/5b2766b5-a31c-44f2-aa07-0b9a781ec4b2%2Fp1.jfif?v=1586547980510" /></a>
     <!-- 
       ================================================= -->
       <footer id="footer">
