--- a/index.html
+++ b/index.html
@@ -324,7 +324,11 @@ document.getElementById('fb-root').appendChild(e);
           </div>
         </div>
       </div>
-<a href="<?php echo 'http://www.facebook.com/sharer.php?u=' . urlencode(https://soundhvish.github.io/prop-vr-soci/); ?>"><img src="https://cdn.glitch.com/5b2766b5-a31c-44f2-aa07-0b9a781ec4b2%2Fp1.jfif?v=1586547980510"></a>
+	    <?php
+$currentSong = array("artist"=>"Vishali", "title"=>"Hello There");
+echo "Peter is " . $age['Peter'] . " years old.";
+?>
+<a class="facebook" target="_blank" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=300')" href="http://www.facebook.com/sharer.php?s=100&p[title]=I'm listening to <?php echo $currentSong->title . ' by ' . $currentSong->artist; ?>&p[summary]=Join me and listen right now or request your own song&p[url]=https://soundhvish.github.io/prop-vr-soci/&p[images[0]=<?php echo $largeimg; ?>"><img src="https://cdn.glitch.com/5b2766b5-a31c-44f2-aa07-0b9a781ec4b2%2Fp1.jfif?v=1586547980510" width="32" height="32" border="0" style="padding-top:5px; padding-right:4px "></a>
     <!-- 
       ================================================= -->
       <footer id="footer">
