--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       />
       <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
      <div id="fb-root"></div>
- <script>
+<!-- <script>
 	 window.fbAsyncInit = function() {
 FB.init({appId: '986351911819016', status: true, cookie: true,
 xfbml: true});
@@ -38,8 +38,17 @@ var e = document.createElement('script'); e.async = true;
 e.src = document.location.protocol +
 '//connect.facebook.net/en_US/all.js';
 document.getElementById('fb-root').appendChild(e);
-}());
+}());-->
+	  <script>
+		  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
 	</script>
+	
 
  
 
