--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ document.getElementById('fb-root').appendChild(e);
 $currentSong = array("artist"=>"Vishali", "title"=>"Hello There", "url"=>"https://soundhvish.github.io/prop-vr-soci/", "image" ="https://cdn.glitch.com/5b2766b5-a31c-44f2-aa07-0b9a781ec4b2%2Fp1.jfif?v=1586547980510" );
 ?>
 <!--<a class="facebook" target="_blank" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=300')" href="http://www.facebook.com/sharer.php?s=100&p[title]=I'm listening to <?php echo $currentSong['title'] . ' by ' . $currentSong->artist; ?>&p[summary]=Join me and listen right now or request your own song&p[url]=https://soundhvish.github.io/prop-vr-soci/&p[images[0]=<?php echo $largeimg; ?>"><img src="https://cdn.glitch.com/5b2766b5-a31c-44f2-aa07-0b9a781ec4b2%2Fp1.jfif?v=1586547980510" width="32" height="32" border="0" style="padding-top:5px; padding-right:4px "></a>-->
-<a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $currentSong['title'];?>&amp;p[url]=<?php echo $currentSong['url']; ?>&amp;p[images][0]=<?php echo $currentSong['image'];?>','sharer','toolbar=0,status=0,width=550,height=300');" href="javascript: void(0)">Share</a>
+<a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $currentSong['title'];?>&amp;p[url]=<?php echo $currentSong['url']; ?>&amp;p[images][0]=<?php echo $currentSong['image'];?>','sharer','toolbar=0,status=0,width=550,height=300');" ">Share</a>
     <!-- 
       ================================================= -->
       <footer id="footer">
