--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ FB.ui(obj, callback);
 }
 
 	 $('.btnShare').click(function(){
-elem = $(this);
+var elem = $(this);
 postToFeed(elem.data('title'), elem.data('desc'), elem.prop('href'), elem.data('image'));
 
 return false;
