--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ return false;
           </div>
         </div>
       </div>
-	  <a href="https://www.facebook.com/sharer/sharer.php?u=" data-image="https://images.pexels.com/photos/4156467/pexels-photo-4156467.jpeg?cs=srgb&dl=woman-in-white-robe-smiling-4156467.jpg&fm=jpg" data-title="Article Title" data-desc="Some description for this article" class="btnShare">Share</a>
+	  <a href="https://www.facebook.com/sharer/sharer.php?u=+https://soundhvish.github.io/prop-vr-soci/" data-image="https://images.pexels.com/photos/4156467/pexels-photo-4156467.jpeg?cs=srgb&dl=woman-in-white-robe-smiling-4156467.jpg&fm=jpg" data-title="Article Title" data-desc="Some description for this article" class="btnShare">Share</a>
     <!-- 
       ================================================= -->
       <footer id="footer">
