--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       />
       <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
      <div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=986351911819016&autoLogAppEvents=1"></script>
  <script>
 	window.fbAsyncInit = function(){
 FB.init({
