--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@ return false;
       <div class="col-md-12 static">
         <div class="profile-card">
           <center>
-            <img
+           <!-- <img
             src="https://cdn.glitch.com/5b2766b5-a31c-44f2-aa07-0b9a781ec4b2%2Fuser-1.jpg?v=1586498385153"
             alt="user"
             class="profile-photo"
-            />
+            />-->
           </center>
           <h5
           style="
